# ado-plug

./: .hlint.yaml  CHANGELOG.md  README.md  ado-plug.cabal
plugin/: ADo.hs
test/: Main.hs
