cabal-version:      3.8
name:               ado-plug
version:            0.1.0.0
license:            NONE
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import: warnings
    hs-source-dirs: plugin
    exposed-modules:
      , ADo
    build-depends:
      , base ^>=4.21.0.0
      , ghc
      , syb
    default-language: Haskell2010
    default-extensions:
      , BlockArguments
      , OverloadedStrings
      , ScopedTypeVariables

test-suite ado-plug-test
    import: warnings
    ghc-options: -fplugin=ADo
    main-is: Main.hs
    build-depends:
      , base ^>=4.21.0.0
      , ado-plug:ado-plug
    hs-source-dirs: test
    default-language: GHC2021
    default-extensions:
      , QualifiedDo
      , DerivingStrategies
